--- a/templates/layout.html
+++ b/templates/layout.html
@@ -5,7 +5,7 @@
 <script src="{{ url_for('static', filename='js/jquery.min.js') }}"></script>
 <script src="{{ url_for('static', filename='js/bootstrap.min.js') }}"></script>
 
-<title>Flask Example</title>
+<title>Flask Example testing</title>
 <nav class="navbar navbar-inverse">
     <div class="container-fluid">
         <div class="navbar-header">
