--- a/templates/layout.html
+++ b/templates/layout.html
@@ -14,7 +14,7 @@
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="/">Flask Example</a>
+            <a class="navbar-brand" href="/">Flask Example , this is a pull request</a>
         </div>
 
         <div class="collapse navbar-collapse" id="myNavbar">
